1st production ready version

--- a/index.html
+++ b/index.html
@@ -188,6 +188,6 @@
     </script>
 </head>
 <body>
-    <my-element id="teaching-calendar"></my-element>
+    <teaching-calendar id="teaching-calendar"></teaching-calendar>
 </body>
 </html>
