improved styles and removed dist folder

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         // Initialize calendar when page loads
         window.addEventListener('load', async function() {
-            const calendar = document.querySelector('my-element');
+            const calendar = document.querySelector('teaching-calendar');
             window.$w = $w;
 
             // Mock the Wix element selection
